--- a/_posts/2023-12-16-blog-post-1.md
+++ b/_posts/2023-12-16-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 4'
-date: 2015-08-14
-permalink: /posts/2012/08/blog-post-4/
+title: 'Diffusion Bridge'
+date: 2023-12-16
+permalink: /posts/2012/08/blog-post-1/
 tags:
   - cool posts
   - category1
